--- a/FSharpKatas/FSharpKatas.fsproj
+++ b/FSharpKatas/FSharpKatas.fsproj
@@ -47,6 +47,8 @@
     <Reference Include="System.Numerics" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="TheLonelyInteger.fs" />
+    <Compile Include="SolveMeSecond.fs" />
     <Compile Include="Program.fs" />
     <None Include="App.config" />
   </ItemGroup>
