--- a/HackerRankChallengesInFsharp/HackerRankChallengesInFsharp.fsproj
+++ b/HackerRankChallengesInFsharp/HackerRankChallengesInFsharp.fsproj
@@ -12,7 +12,7 @@
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <TargetFSharpCoreVersion>4.3.1.0</TargetFSharpCoreVersion>
-    <Name>FSharpKatas</Name>
+    <Name>HackerRankChallengesInFSharp</Name>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
