--- a/MyCodingChallenges/MyCodingChallenges.fsproj
+++ b/MyCodingChallenges/MyCodingChallenges.fsproj
@@ -56,8 +56,6 @@
   </Choose>
   <Import Project="$(FSharpTargetsPath)" />
   <ItemGroup>
-    <Compile Include="Challenge.fs" />
-    <Compile Include="ChallengeFixture.fs" />
     <Compile Include="FsUnitSample.fs" />
     <Compile Include="FacebookBsAndAs.fs" />
     <Compile Include="Program.fs" />
@@ -66,21 +64,24 @@
   </ItemGroup>
   <ItemGroup>
     <Reference Include="FsUnit.CustomMatchers">
-      <HintPath>..\packages\FsUnit.xUnit.Sample.1.3.0.1\Lib\net40\FsUnit.CustomMatchers.dll</HintPath>
+      <HintPath>..\packages\FsUnit.xUnit.1.3.0.1\Lib\net40\FsUnit.CustomMatchers.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="FsUnit.CustomMatchers" />
     <Reference Include="FsUnit.Xunit">
-      <HintPath>..\packages\FsUnit.xUnit.Sample.1.3.0.1\Lib\net40\FsUnit.Xunit.dll</HintPath>
+      <HintPath>..\packages\FsUnit.xUnit.1.3.0.1\Lib\net40\FsUnit.Xunit.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="FsUnit.Xunit" />
     <Reference Include="mscorlib" />
     <Reference Include="FSharp.Core, Version=$(TargetFSharpCoreVersion), Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
       <Private>True</Private>
     </Reference>
     <Reference Include="NHamcrest">
-      <HintPath>..\packages\FsUnit.xUnit.Sample.1.3.0.1\Lib\net40\NHamcrest.dll</HintPath>
+      <HintPath>..\packages\FsUnit.xUnit.1.3.0.1\Lib\net40\NHamcrest.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="NHamcrest" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Numerics" />
@@ -88,6 +89,14 @@
       <HintPath>..\packages\xunit.1.9.1\lib\net20\xunit.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="xunit" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Coding.Challenges.Core\Coding.Challenges.Core.fsproj">
+      <Name>Coding.Challenges.Core</Name>
+      <Project>{0e1029cd-57f7-4824-8b8d-3475888749df}</Project>
+      <Private>True</Private>
+    </ProjectReference>
   </ItemGroup>
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
